Added a login sytem
full login system

--- a/Question/templates/question/admin.html
+++ b/Question/templates/question/admin.html
@@ -6,5 +6,6 @@
      {% endfor %}
 </ul>
 
-<a href="/admin">Django Admin</a>
+<a href="/admin">Django Admin</a> <br>
+<a href='/question/logout/'>Logout</a>
 
