--- a/Question/templates/question/login.html
+++ b/Question/templates/question/login.html
@@ -1,6 +1,6 @@
 <h1>Login</h1>
-<form action="" method="post">
+<form method="post"> 
     {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="OK">
+    {{ form.as_p }}
+    <button type="submit">Login</button>
 </form>
