--- a/Question/templates/base.html
+++ b/Question/templates/base.html
@@ -15,6 +15,18 @@
     </style>
 
     <body>
+         <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                  <div class="navbar-header">
+                    <a class="navbar-brand" href="/">Oscar's Questions</a>
+                  </div>
+                  <ul class="nav navbar-nav">
+                    <li><a href="/question/ask">Ask</a></li>
+                    <li><a href="/question/admin">Admin</a></li>
+                    
+                  </ul>
+                </div>
+             </nav>
     {% block content %}{% endblock content %}
     </body>
 
