--- a/Question/templates/question/logout.html
+++ b/Question/templates/question/logout.html
@@ -1,6 +1,10 @@
+{% extends "base.html" %}
+
+{% block content %}
 <h1>Logout</h1>
 <form method="post" action="/"> 
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Logout</button>
 </form>
+{% endblock content %}
