Logout + Username + Database
*Added a username field to form
*Added a username field to database
*Logout page dosn't extend base.html

--- a/Question/templates/question/ask.html
+++ b/Question/templates/question/ask.html
@@ -35,6 +35,8 @@
                 <p>Question Text:</p>
                 {{ form.QuestionText }}
                 <br>
+                <p>Username</p>
+                {{ form.UserText }}
                 <br>
                 <input type="submit" value="Post">
             </div>
