--- a/Question/templates/question/question.html
+++ b/Question/templates/question/question.html
@@ -3,6 +3,7 @@
 {% block content %}
 <h3>{{question_object.question_title}}</h3>
 <p>{{question_object.question_text}}</p>
+<p>Username: {{question_object.user_name}}</p>
 <p><strong>Answers</strong></p>
 
 <ul>
