--- a/Question/templates/question/admin.html
+++ b/Question/templates/question/admin.html
@@ -1,8 +1,25 @@
-{% extends "base.html" %}
-{% block content %}
+<head>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
 
-
-
+<nav class="navbar navbar-default">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Oscar's Questions</a>
+         </div>
+        <ul class="nav navbar-nav">
+            <li><a href="/question/ask">Ask</a></li>
+            <li><a href="/question/admin">Admin</a></li> 
+            <li><a href="/admin">Django Admin</a></li>           
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="">Welcome {{ request.user.first_name }} {{ request.user.last_name }}</a></li>
+            <li><a href="/question/logout/"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
+        </ul>
+    </div>
+</nav>
 
 {% if message %}<p><strong>{{ message }}</strong></p>{% endif %}
 
@@ -13,7 +30,5 @@
      {% endfor %}
 </ul>
 
-<a href="/admin">Django Admin</a> <br>
-<a href='/question/logout/'>Logout</a>
-{% endblock content %}
+
 
