New User + Admin
* Added a new user form
* Added a new title in the admin

--- a/Question/templates/question/login.html
+++ b/Question/templates/question/login.html
@@ -1,5 +1,5 @@
+<title>Login</title>
 
-{% block content %}
 
 <h1>Login</h1>
 <form method="post"> 
@@ -7,4 +7,3 @@
     {{ form.as_p }}
     <button type="submit">Login</button>
 </form>
-{% endblock content %}
