--- a/Question/templates/question/logout.html
+++ b/Question/templates/question/logout.html
@@ -1,5 +1,5 @@
-
-<h1>Logout</h1>
+<title>Logout</title>
+<h1>Are you sure you want to logout?</h1>
 <form method="post" action="/"> 
     {% csrf_token %}
     {{ form.as_p }}
