--- a/Question/templates/question/admin.html
+++ b/Question/templates/question/admin.html
@@ -2,6 +2,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <title>Oscar's Questions - Admin</title>
 </head>
 
 <nav class="navbar navbar-default">
@@ -21,8 +22,7 @@
     </div>
 </nav>
 
-{% if message %}<p><strong>{{ message }}</strong></p>{% endif %}
-
+<h3>Questions</h3>
 
 <ul>
      {% for Question in question_list %}
